# Repo-Guardian

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run_agent.py
.github/workflows/: streak-backup.yml
assets/: .gitkeep
src/streak_agent/: __init__.py  config.py  git_service.py  llm_service.py  main.py  readme_service.py  validator.py
