[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "repo-guardian"
version = "1.0.0"
description = "Scheduled AI-powered development-log backup for one GitHub repository"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "langchain>=0.3.0,<0.4.0",
    "langchain-core>=0.3.0,<0.4.0",
    "langchain-groq>=0.2.0,<0.3.0",
    "python-dotenv>=1.0.0,<2.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
